# rp2040-tinyusb-hid-cdc-example

./: CMakeLists.txt  README.md  program_auto_set_url.cmake
include/: stdio_tinyusb_cdc.h  tusb_config.h
src/: main.c  main.cpp  reset_interface.c  stdio_tinyusb_cdc.c  usb_descriptors.c
